# shady

./: .gitignore  Cargo.toml  README.md  flake.nix  notes.md
nix/: package.nix  shady-cli-package.nix  shady-toy-package.nix
shader-examples/: introduction_to_shader_art_coding.wgsl
shady-app/: Cargo.toml
shady-app/benches/: octagrams.glsl
shady-app/examples/: mini-simple.rs
shady-app/src/: cli.rs  frontend.rs  logger.rs  main.rs  mouse.rs  renderer.rs  template.glsl  template.wgsl
shady-audio/: Cargo.toml  README.md
shady-audio/examples/: adjusting_bar_processor.rs  custom_system_fetcher.rs  default_system_fetcher.rs  simple.rs
shady-audio/src/: audio_spline.rs  config.rs  equalizer.rs  error.rs  fft.rs  frequency_bands.rs  lib.rs  magnitude.rs  processor.rs  sample_processor.rs  timer.rs  util.rs
shady-audio/src/bar_processor/: config.rs  mod.rs
shady-audio/src/equalizer/: config.rs  error.rs  mod.rs
shady-audio/src/fetcher/: dummy.rs  mod.rs  system_audio.rs
shady-audio/src/interpolation/: context.rs  cubic_spline.rs  linear.rs  mod.rs  nothing.rs
shady-audio/tests/: integration_test.rs
shady-cli/: Cargo.toml  README.md
shady-cli/src/: device_selector.rs  main.rs  visualizer.rs
shady-lib/: Cargo.toml  README.md
shady-lib/examples/: mini-simple.rs
shady-lib/src/: descriptor.rs  frontend.rs  lib.rs  shader_language.rs  template.rs  vertices.rs
shady-lib/src/resources/: audio.rs  frame.rs  mod.rs  mouse.rs  resolution.rs  time.rs
shady-lib/src/shader_language/: glsl.rs  mod.rs  wgsl.rs
shady-lib/src/uniforms/: audio.rs  frame.rs  mod.rs  mouse.rs  resolution.rs  time.rs
shady-renderer/: Cargo.toml
shady-toy/: Cargo.toml  README.md
shady-toy/benches/: octagrams.glsl  octagrams.rs
shady-toy/examples/: mini-simple.rs
shady-toy/shader-examples/: octagrams.glsl
shady-toy/src/: cli.rs  logger.rs  main.rs  renderer.rs  template.glsl  template.wgsl
shady-toy/src/states/: inner.rs  mod.rs  texture_state.rs  window_state.rs
