[workspace]
members = ["shady-lib", "shady-toy", "shady-audio", "shady-cli"]
resolver = "2"

[workspace.dependencies]
wgpu = { version = "22.0", default-features = false, features = [
  "naga-ir",
  "wgsl",
  "glsl",
] }
tracing = "0.1"
thiserror = "2"

pollster = "0.4.0"
winit = "0.30"

cpal = "0.15"
realfft = "3.4"
splines = "4"
clap = { version = "4.5", features = ["derive", "cargo"] }

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = true
