[package]
name = "shady-app"
version = "0.1.0"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A desktop app for shady to create your own shaders with wgsl."
license = "GPL2"

[dependencies]
anyhow = "1"
ariadne = "0.5"
clap = { version = "4.5", features = ["derive", "cargo"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pollster = "0.4.0"
winit = "0.30"
notify = "7"
shady = { path = "../shady-lib" }

wgpu.workspace = true
tracing.workspace = true
thiserror.workspace = true
