[package]
name = "shady-audio"
version = "14.0.0"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A high level library build upon cpal to retrieve audio for visualisation."
license = "GPL-3.0-or-later"
homepage = "https://github.com/TornaxO7/shady"
documentation = "https://docs.rs/shady-audio"
repository = "https://github.com/TornaxO7/shady/tree/main/shady-audio"

[dependencies]
cpal.workspace = true
realfft.workspace = true
tracing.workspace = true
thiserror.workspace = true

apodize = "1"
nalgebra = "0.33"
easing-function = { version = "0.1" }

[features]
default = []
serde = ["easing-function/serde"]
