[package]
name = "shady-cli"
version = "0.1.0"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A music visualizer in the terminal"
license = "GPL2"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

shady-audio = { path = "../shady-audio" }

splines.workspace = true
tracing.workspace = true
