[package]
name = "shady-cli"
version = "0.2.0"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A music visualizer in the terminal using shady-audio."
license = "GPL-3.0-or-later"
homepage = "https://github.com/TornaxO7/shady"
repository = "https://github.com/TornaxO7/shady/tree/main/shady-cli"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

shady-audio = { path = "../shady-audio", version = "13" }

tracing.workspace = true
clap.workspace = true
