[package]
name = "shady"
version = "0.1.0"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A shadertoy-like library to be able to easily integrate shadertoy-like stuff in your applications."
license = "GPL-3.0-or-later"
repository = "https://github.com/TornaxO7/shady/tree/main/shady-lib"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }

shady-audio = { path = "../shady-audio", version = "3.0", optional = true }

wgpu.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
winit.workspace = true
pollster.workspace = true

[features]
default = ["time", "resolution", "audio", "mouse", "frame"]

time = []
resolution = []
audio = ["dep:shady-audio"]
mouse = []
frame = []
