[package]
name = "shady-renderer"
version = "0.1.0"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A music visualizer in the terminal"
license = "GPL-3.0-or-later"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

shady-audio = { path = "../shady-audio" }

tracing.workspace = true
