[package]
name = "shady-toy"
version = "0.1.0"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A desktop app for shady to create your own shaders with wgsl and/or glsl."
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
ariadne = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "8"
shady = { path = "../shady-lib", default-features = false }

winit.workspace = true
wgpu.workspace = true
tracing.workspace = true
thiserror.workspace = true
clap.workspace = true
pollster.workspace = true

[dev-dependencies]
image = "0.25"

[features]
default = ["audio", "frame", "mouse", "resolution", "time"]

audio = ["shady/audio"]
frame = ["shady/frame"]
mouse = ["shady/mouse"]
resolution = ["shady/resolution"]
time = ["shady/time"]
